# OpenGL-snow-scene

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  camera.c  camera.h  content.c  content.h  full.c  full.h  ground.c  ground.h  instancing.c  instancing.h  keyboard.c  keyboard.h  light.c  light.h  main.c  main.h  plain.c  plain.h  shadow.c  shadow.h  simple.c  simple.h  skybox.c  skybox.h  utilities.c  utilities.h
cmake/: FindGLEW.cmake
documentation/: report.tex
libraries/: GLUtilities.c  LoadObject.h  LoadTGA.c  VectorUtils3.c  VectorUtils3.h
models/: gatlykta.mtl  snow.mtl
shaders/: depth.frag  depth.vert  full.frag  full.vert  ground.frag  ground.vert  instancing.frag  instancing.vert  plain.frag  plain.vert  plainTexture.frag  simple.frag  simple.vert  skybox.frag  skybox.vert
textures/: metal.tga  snow.tga
